@@ -4,6 +4,7 @@
 
 --------------------------------------------------------------------------
   v.3.4-Alpha4 
+	- Added paging to the Playlist Song view
 	- Fixed error on catalog Update All 
 	- Fixed Public registration page, and simplified logic
 	- Added 'Add' button to recently played
